changed formatting ep1-ep2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <div id="root"><h1>Ujjwal is Here</h1></div>
+    <div id="root">
+        <h1>Ujjwal is Here</h1>
+    </div>
     <script type="module" src="./App.js"></script>
 </body>
 
